--- a/styles/index.css
+++ b/styles/index.css
@@ -170,8 +170,8 @@ li:hover .country{
     height: 10px;
 }
 .logo{
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
 }
 /* END */
 
@@ -191,8 +191,9 @@ header nav{
     padding: 0 80px;
 }
 .logo2{
-    width: 70px;
-    height: 70px;
+    width: 40px;
+    height: 40px;
+    margin-top: -20px;
 }
 .internetbanking{
     background-image: linear-gradient( 50deg, rgb(250, 40, 3)40%, rgb(180, 37, 12) 60%);
